force-app/main/default/objects/Pet__c/fields/Adoption__c.field-meta.xml
<CustomField>
    <fullName>Adoption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adoption</label>
    <referenceTo>Adoption__c</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <type>Lookup</type>
</CustomField>