force-app/main/default/objects/Pet__c/fields/Adoption_History__c.field-meta.xml
<CustomField>
    <fullName>Adoption_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adoption History</label>
    <referenceTo>Adoption_History__c</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <type>Lookup</type>
</CustomField>