force-app/main/default/objects/Pet__c/fields/Date_of_last_vaccination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_vaccination__c</fullName>
    <label>Date of last vaccination</label>
    <required>true</required>
    <type>Date</type>
</CustomField>