force-app/main/default/objects/Pet__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Species__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed breed</fullName>
            </value>
            <value>
                <fullName>poodle</fullName>
            </value>
            <value>
                <fullName>siamese</fullName>
            </value>
            <value>
                <fullName>persian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>